Updated benchmark to use gpu and cvae code

--- a/benchmarks/leaderboard.ipynb
+++ b/benchmarks/leaderboard.ipynb
@@ -3,7 +3,15 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-08-30T01:49:34.752751Z",
+     "iopub.status.busy": "2025-08-30T01:49:34.752453Z",
+     "iopub.status.idle": "2025-08-30T01:49:36.290664Z",
+     "shell.execute_reply": "2025-08-30T01:49:36.290091Z",
+     "shell.execute_reply.started": "2025-08-30T01:49:34.752730Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import jsonlines\n",
@@ -29,213 +37,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
+   "execution_count": 7,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-08-30T01:51:03.099981Z",
+     "iopub.status.busy": "2025-08-30T01:51:03.099612Z",
+     "iopub.status.idle": "2025-08-30T01:51:03.148331Z",
+     "shell.execute_reply": "2025-08-30T01:51:03.147539Z",
+     "shell.execute_reply.started": "2025-08-30T01:51:03.099958Z"
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Found 92 files\n"
+      "Found 0 files\n"
      ]
     },
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>ate</th>\n",
-       "      <th>erf</th>\n",
-       "      <th>ite</th>\n",
-       "      <th>env</th>\n",
-       "      <th>dataset_id</th>\n",
-       "      <th>algo</th>\n",
-       "      <th>smoothness</th>\n",
-       "      <th>confounding</th>\n",
-       "      <th>timestamp</th>\n",
-       "      <th>binary</th>\n",
-       "      <th>confounding_erf</th>\n",
-       "      <th>confounding_ate</th>\n",
-       "      <th>confounding_ite</th>\n",
-       "      <th>confounding_importance</th>\n",
-       "      <th>smooth_level</th>\n",
-       "      <th>conf_ate_level</th>\n",
-       "      <th>conf_erf_level</th>\n",
-       "      <th>conf_ite_level</th>\n",
-       "      <th>conf_imp_level</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0.409233</td>\n",
-       "      <td>0.204616</td>\n",
-       "      <td>0.383995</td>\n",
-       "      <td>county_dmgrcs_election_disc</td>\n",
-       "      <td>0</td>\n",
-       "      <td>\\textsc{dapsm}</td>\n",
-       "      <td>0.925588</td>\n",
-       "      <td>{'erf': 0.037487830966711044, 'ate': 0.0223152...</td>\n",
-       "      <td>20230827-171502</td>\n",
-       "      <td>True</td>\n",
-       "      <td>0.037488</td>\n",
-       "      <td>0.022315</td>\n",
-       "      <td>0.129298</td>\n",
-       "      <td>0.041234</td>\n",
-       "      <td>high</td>\n",
-       "      <td>low</td>\n",
-       "      <td>high</td>\n",
-       "      <td>low</td>\n",
-       "      <td>high</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0.407160</td>\n",
-       "      <td>0.203580</td>\n",
-       "      <td>0.382902</td>\n",
-       "      <td>county_dmgrcs_election_disc</td>\n",
-       "      <td>1</td>\n",
-       "      <td>\\textsc{dapsm}</td>\n",
-       "      <td>0.760690</td>\n",
-       "      <td>{'erf': 0.03191845864057541, 'ate': 0.00084824...</td>\n",
-       "      <td>20230827-171502</td>\n",
-       "      <td>True</td>\n",
-       "      <td>0.031918</td>\n",
-       "      <td>0.000848</td>\n",
-       "      <td>0.123132</td>\n",
-       "      <td>0.015545</td>\n",
-       "      <td>high</td>\n",
-       "      <td>low</td>\n",
-       "      <td>low</td>\n",
-       "      <td>low</td>\n",
-       "      <td>low</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>0.406663</td>\n",
-       "      <td>0.203332</td>\n",
-       "      <td>0.382641</td>\n",
-       "      <td>county_dmgrcs_election_disc</td>\n",
-       "      <td>2</td>\n",
-       "      <td>\\textsc{dapsm}</td>\n",
-       "      <td>0.955891</td>\n",
-       "      <td>{'erf': 0.05424032360315323, 'ate': 0.04438314...</td>\n",
-       "      <td>20230827-171502</td>\n",
-       "      <td>True</td>\n",
-       "      <td>0.054240</td>\n",
-       "      <td>0.044383</td>\n",
-       "      <td>0.172948</td>\n",
-       "      <td>0.029017</td>\n",
-       "      <td>high</td>\n",
-       "      <td>high</td>\n",
-       "      <td>high</td>\n",
-       "      <td>high</td>\n",
-       "      <td>high</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0.409570</td>\n",
-       "      <td>0.204785</td>\n",
-       "      <td>0.384173</td>\n",
-       "      <td>county_dmgrcs_election_disc</td>\n",
-       "      <td>3</td>\n",
-       "      <td>\\textsc{dapsm}</td>\n",
-       "      <td>0.884109</td>\n",
-       "      <td>{'erf': 0.01251188013702631, 'ate': 0.02270138...</td>\n",
-       "      <td>20230827-171502</td>\n",
-       "      <td>True</td>\n",
-       "      <td>0.012512</td>\n",
-       "      <td>0.022701</td>\n",
-       "      <td>0.116315</td>\n",
-       "      <td>0.026945</td>\n",
-       "      <td>high</td>\n",
-       "      <td>low</td>\n",
-       "      <td>low</td>\n",
-       "      <td>low</td>\n",
-       "      <td>low</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>0.409370</td>\n",
-       "      <td>0.204685</td>\n",
-       "      <td>0.384067</td>\n",
-       "      <td>county_dmgrcs_election_disc</td>\n",
-       "      <td>4</td>\n",
-       "      <td>\\textsc{dapsm}</td>\n",
-       "      <td>0.307451</td>\n",
-       "      <td>{'erf': 0.013948217034339905, 'ate': 0.0032325...</td>\n",
-       "      <td>20230827-171502</td>\n",
-       "      <td>True</td>\n",
-       "      <td>0.013948</td>\n",
-       "      <td>0.003233</td>\n",
-       "      <td>0.097092</td>\n",
-       "      <td>0.003454</td>\n",
-       "      <td>low</td>\n",
-       "      <td>low</td>\n",
-       "      <td>low</td>\n",
-       "      <td>low</td>\n",
-       "      <td>low</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "        ate       erf       ite                          env  dataset_id  \\\n",
-       "0  0.409233  0.204616  0.383995  county_dmgrcs_election_disc           0   \n",
-       "1  0.407160  0.203580  0.382902  county_dmgrcs_election_disc           1   \n",
-       "2  0.406663  0.203332  0.382641  county_dmgrcs_election_disc           2   \n",
-       "3  0.409570  0.204785  0.384173  county_dmgrcs_election_disc           3   \n",
-       "4  0.409370  0.204685  0.384067  county_dmgrcs_election_disc           4   \n",
-       "\n",
-       "             algo  smoothness  \\\n",
-       "0  \\textsc{dapsm}    0.925588   \n",
-       "1  \\textsc{dapsm}    0.760690   \n",
-       "2  \\textsc{dapsm}    0.955891   \n",
-       "3  \\textsc{dapsm}    0.884109   \n",
-       "4  \\textsc{dapsm}    0.307451   \n",
-       "\n",
-       "                                         confounding        timestamp  binary  \\\n",
-       "0  {'erf': 0.037487830966711044, 'ate': 0.0223152...  20230827-171502    True   \n",
-       "1  {'erf': 0.03191845864057541, 'ate': 0.00084824...  20230827-171502    True   \n",
-       "2  {'erf': 0.05424032360315323, 'ate': 0.04438314...  20230827-171502    True   \n",
-       "3  {'erf': 0.01251188013702631, 'ate': 0.02270138...  20230827-171502    True   \n",
-       "4  {'erf': 0.013948217034339905, 'ate': 0.0032325...  20230827-171502    True   \n",
-       "\n",
-       "   confounding_erf  confounding_ate  confounding_ite  confounding_importance  \\\n",
-       "0         0.037488         0.022315         0.129298                0.041234   \n",
-       "1         0.031918         0.000848         0.123132                0.015545   \n",
-       "2         0.054240         0.044383         0.172948                0.029017   \n",
-       "3         0.012512         0.022701         0.116315                0.026945   \n",
-       "4         0.013948         0.003233         0.097092                0.003454   \n",
-       "\n",
-       "  smooth_level conf_ate_level conf_erf_level conf_ite_level conf_imp_level  \n",
-       "0         high            low           high            low           high  \n",
-       "1         high            low            low            low            low  \n",
-       "2         high           high           high           high           high  \n",
-       "3         high            low            low            low            low  \n",
-       "4          low            low            low            low            low  "
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "KeyError",
+     "evalue": "'confounding'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[7], line 26\u001b[0m\n\u001b[1;32m     20\u001b[0m         results\u001b[38;5;241m.\u001b[39mextend(\u001b[38;5;28mlist\u001b[39m(reader))\n\u001b[1;32m     22\u001b[0m results \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mDataFrame(results)\n\u001b[1;32m     24\u001b[0m results \u001b[38;5;241m=\u001b[39m (\n\u001b[1;32m     25\u001b[0m     results\n\u001b[0;32m---> 26\u001b[0m     \u001b[38;5;241m.\u001b[39massign(confounding_erf\u001b[38;5;241m=\u001b[39m[x[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124merf\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m \u001b[43mresults\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mconfounding\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m])\n\u001b[1;32m     27\u001b[0m     \u001b[38;5;241m.\u001b[39massign(confounding_ate\u001b[38;5;241m=\u001b[39m[x[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mate\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m results[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mconfounding\u001b[39m\u001b[38;5;124m\"\u001b[39m]])\n\u001b[1;32m     28\u001b[0m     \u001b[38;5;241m.\u001b[39massign(confounding_ite\u001b[38;5;241m=\u001b[39m[x[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mite\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m results[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mconfounding\u001b[39m\u001b[38;5;124m\"\u001b[39m]])\n\u001b[1;32m     29\u001b[0m     \u001b[38;5;241m.\u001b[39massign(confounding_importance\u001b[38;5;241m=\u001b[39m[x[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mimportance\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m results[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mconfounding\u001b[39m\u001b[38;5;124m\"\u001b[39m]])\n\u001b[1;32m     30\u001b[0m     \u001b[38;5;66;03m# .query(\"algo != 's2sls-lag2' and algo != 'xgboost'\")\u001b[39;00m\n\u001b[1;32m     31\u001b[0m     \u001b[38;5;241m.\u001b[39massign(algo\u001b[38;5;241m=\u001b[39mresults\u001b[38;5;241m.\u001b[39malgo\u001b[38;5;241m.\u001b[39mmap(algomap))\n\u001b[1;32m     32\u001b[0m )\n\u001b[1;32m     33\u001b[0m smooth_thrsh\u001b[38;5;241m=\u001b[39m results\u001b[38;5;241m.\u001b[39msmoothness\u001b[38;5;241m.\u001b[39mmedian()\n\u001b[1;32m     34\u001b[0m conf_erf_thrsh \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mnanquantile(results\u001b[38;5;241m.\u001b[39mconfounding_erf, \u001b[38;5;241m0.5\u001b[39m)\n",
+      "File \u001b[0;32m~/workspace/Temporary/akhot2/scratch/spacedata/lib/python3.10/site-packages/pandas/core/frame.py:4107\u001b[0m, in \u001b[0;36mDataFrame.__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   4105\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcolumns\u001b[38;5;241m.\u001b[39mnlevels \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m1\u001b[39m:\n\u001b[1;32m   4106\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_getitem_multilevel(key)\n\u001b[0;32m-> 4107\u001b[0m indexer \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcolumns\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkey\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   4108\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m is_integer(indexer):\n\u001b[1;32m   4109\u001b[0m     indexer \u001b[38;5;241m=\u001b[39m [indexer]\n",
+      "File \u001b[0;32m~/workspace/Temporary/akhot2/scratch/spacedata/lib/python3.10/site-packages/pandas/core/indexes/range.py:417\u001b[0m, in \u001b[0;36mRangeIndex.get_loc\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m    415\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(key) \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01merr\u001b[39;00m\n\u001b[1;32m    416\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(key, Hashable):\n\u001b[0;32m--> 417\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(key)\n\u001b[1;32m    418\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_check_indexing_error(key)\n\u001b[1;32m    419\u001b[0m \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(key)\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'confounding'"
+     ]
     }
    ],
    "source": [
@@ -251,8 +83,9 @@
     "    \"xgboost\": \"\\\\textsc{xgboost}\",\n",
     "}\n",
     "\n",
-    "directory_path = \"benchmarks/results\"\n",
+    "directory_path = \"results\"\n",
     "file_list = glob.glob(\"**/*.jsonl\", root_dir=directory_path, recursive=True)\n",
+    "file_list = [file if \"rad\" in file for fle i\n",
     "print(f\"Found {len(file_list)} files\")\n",
     "\n",
     "results = []\n",
